# rash

./: Cargo.toml  Readme.md  build.rs
src/: cli.rs  main.rs  tests.rs
