[package]
name = "rash"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
readme = "Readme.md"
publish = true
repository = "https://github.com/themadprofessor/rash"
description = "Rust-based file hashing tool"
categories = ["cryptography", "command-line-utilities"]
keywords = ["hash", "digest", "crypto", "sha3", "md5"]
license = "MIT/Apache-2.0"

[dependencies]
rust-crypto = "0.2"
failure = "0.1"
clap = "2.31"